Bug 18588 - XCB backend fails with missing render
Summary: XCB backend fails with missing render
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: xcb backend (show other bugs)
Version: 1.8.4
Hardware: Other All
: medium major
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-18 01:15 UTC by Julien Danjou
Modified: 2008-12-14 05:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to fix this bug (1.32 KB, patch)
2008-11-18 01:15 UTC, Julien Danjou
Details | Splinter Review

Description Julien Danjou 2008-11-18 01:15:14 UTC
Created attachment 20396 [details] [review]
Patch to fix this bug

Hi,

If XCB backend is use on a X display without RENDER extension, cairo will cause a segmentation fault because it uses query RENDER version without checking for the extension presence.

The attached patch fix this bug.

Cheers.
Comment 1 Chris Wilson 2008-12-14 05:06:32 UTC
I've pushed the commit to both master and 1.8 branches.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.